--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -1,10 +1,21 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  gap: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+:root {
+  --Purple-Black: #200726;
+  --Purple-Contrast: #350c4c;
+  --Purple-Medium: #4a1259;
+  --Purple-Light: #622773;
+  --Purple-Primary: #66507f;
+  --Purple-Secondary: #cda1ff;
+  --Purple-Tertiary: #a481cc;
+  --Red-Alert:  #bf0413;
+  --White: #E6DEEF;
 }
 
 code {
