Adding font-size of h1, h2, h3, h4 and p

--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -18,6 +18,36 @@
   --White: #ffffff;
 }
 
+h1 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: 2.75rem;
+}
+
+h2 {
+  font-size: 1.75rem;
+  font-weight: 600;
+  line-height: 2rem;
+}
+
+h3 {
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 1.5rem;
+}
+
+h4 {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.25rem;
+}
+
+p {
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 1rem;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
