Added the names of the links

--- a/web-app/src/pages/components/links/Links.css
+++ b/web-app/src/pages/components/links/Links.css
@@ -2,13 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: 5vh;
+
   background-color: #622773;
 }
   
 .links-main-div ul {
   display: flex;
-  margin-top: 8px;
-  margin-bottom: 8px;
+
   list-style-type: none;
 }
 
