--- a/web-app/src/pages/register/Register.css
+++ b/web-app/src/pages/register/Register.css
@@ -1,7 +1,3 @@
-h2, h4 {
-  color: var(--Purple-Primary);
-}
-
 .register {
   display: flex;
   flex-direction: column;
@@ -38,6 +34,14 @@ h2, h4 {
 .register-data {
   display: flex;
   flex-direction: row;
+}
+
+.register-data h2 {
+  color: var(--Purple-Primary);
+}
+
+.register-data h4 {
+  color: var(--Purple-Primary);
 }
 
 .title {
@@ -99,6 +103,8 @@ h2, h4 {
 
   background: var(--Purple-Light);
   color: var(--Gray);
+
+  cursor: pointer;
 }
 
 .register-input {
