--- a/web-app/src/pages/categories/Categories.css
+++ b/web-app/src/pages/categories/Categories.css
@@ -95,6 +95,13 @@
   background-color: var(--Purple-Tertiary);
 }
 
+.categories {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
 .categories-middle-line {
   display: flex;
   flex-direction: column;
