Initial front-back item integration

--- a/web-app/src/pages/products/Products.css
+++ b/web-app/src/pages/products/Products.css
@@ -95,6 +95,18 @@
   background-color: var(--Purple-Tertiary);
 }
 
+.products {
+  display: flex;
+  flex-direction: column;
+
+  align-self: center;
+  height: 50vh;
+
+  overflow-y: scroll;
+}
+
+
+
 .products-middle-line {
   display: flex;
   flex-direction: column;
