--- a/web-app/src/pages/products/createProduct/CreateProduct.css
+++ b/web-app/src/pages/products/createProduct/CreateProduct.css
@@ -44,6 +44,8 @@
 .createProduct-left-column label {
   display: flex;
 
+  margin: 0px;
+
   width: 100%;
   height: 100%;
 }
@@ -98,7 +100,7 @@
   border: none;
   outline: none;
 
-  margin-bottom: 10px;
+  margin: 0 0 10px 0;
   padding: 10px;
 
   color: var(--Purple-Primary);
@@ -159,18 +161,18 @@
 
 }
 
-.createProduct-search-bar button {
+.createProduct-search-bar select {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 20%;
+  width: 15vw;
   height: 30px;
 
   border-radius: 0 4px 4px 0;
   border: none;
   cursor: pointer;
 
-  background-color: var(--Purple-Tertiary);
+  background-color: var(--Gray);
 }
 
 .createProduct-button {
