--- a/web-app/src/pages/products/editProduct/EditProduct.css
+++ b/web-app/src/pages/products/editProduct/EditProduct.css
@@ -44,6 +44,8 @@
 .editProduct-left-column label {
 	display: flex;
 
+	margin: 0px;
+
 	width: 100%;
 	height: 100%;
 }
@@ -80,7 +82,7 @@
 	border: none;
 	outline: none;
 
-	margin-bottom: 16px;
+	margin: 0 0 10px 0;
 	padding: 10px;
 
 	color: var(--Purple-Primary);
@@ -159,18 +161,18 @@
 
 }
 
-.editProduct-search-bar button {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 20%;
-	height: 30px;
+.createProduct-search-bar select {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 15vw;
+  height: 30px;
 
-	border-radius: 0 4px 4px 0;
-	border: none;
-	cursor: pointer;
+  border-radius: 0 4px 4px 0;
+  border: none;
+  cursor: pointer;
 
-	background-color: var(--Purple-Tertiary);
+  background-color: var(--Gray);
 }
 
 .editProduct-button {
